--- a/LanguageModel/LuaVSHost/Properties/Resources.resx
+++ b/LanguageModel/LuaVSHost/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddNewLinesToMultilineTableConstructorsCheckBoxContent" xml:space="preserve">
+    <value>Add new lines to multiline table constructors</value>
+  </data>
   <data name="FixedFunctionIndentationRadioContent" xml:space="preserve">
     <value>Fixed</value>
   </data>
@@ -146,6 +149,9 @@
   </data>
   <data name="GeneralGroupBoxHeader" xml:space="preserve">
     <value>General</value>
+  </data>
+  <data name="NewLinesGroupBoxHeader" xml:space="preserve">
+    <value>New Lines</value>
   </data>
   <data name="RelativeFunctionIndentationRadioContent" xml:space="preserve">
     <value>Relative</value>
@@ -188,5 +194,17 @@
   </data>
   <data name="TableIndentationGroupBoxHeader" xml:space="preserve">
     <value>Tables</value>
+  </data>
+  <data name="WrappingGroupBoxHeader" xml:space="preserve">
+    <value>Wrapping</value>
+  </data>
+  <data name="WrapSingleLineForLoopsCheckBoxContent" xml:space="preserve">
+    <value>Wrap all single-line for loops</value>
+  </data>
+  <data name="WrapSingleLineFunctionsCheckBoxContent" xml:space="preserve">
+    <value>Wrap all single-line functions</value>
+  </data>
+  <data name="WrapSingleLineTableConstructorsCheckBoxContent" xml:space="preserve">
+    <value>Wrap all single-line table constructors</value>
   </data>
 </root>
